rename package, rework project structure

--- a/package.json
+++ b/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "model",
+  "name": "oracle-dictionary-tools",
   "license": "MIT",
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/ogobrecht/model.git"
+    "url": "https://github.com/ogobrecht/dito.git"
   },
   "scripts": {
-    "watch": "chokidar src/*.* --initial --command \"npm run build\"",
-    "prebuild": "npx ploc --in src/MODEL.pks --out README.md",
-    "build": "node src/build.js",
-    "postbuild": "echo exit | sqlplus -S /@playground @install.sql",
-    "uninstall": "echo exit | sqlplus -S /@playground @uninstall.sql"
+    "watch": "chokidar sources/*.* --initial --command \"npm run build\"",
+    "prebuild": "npx ploc --in sources/DITO.pks --out README.md",
+    "build": "node sources/build.js",
+    "postbuild": "echo exit | sqlplus -S /@playground @install/create_database_objects.sql",
+    "uninstall": "echo exit | sqlplus -S /@playground @uninstall/drop_database_objects.sql"
   },
   "devDependencies": {
     "chokidar-cli": "^3.0.0",
-    "glob": "^7.2.0",
+    "glob": "^8.0.3",
     "markdown-toc": "^1.2.0",
+    "npm-check-updates": "^16.3.7",
     "npm-run-all": "^4.1.5",
     "ploc": "^0.8.0"
   }
