--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/ogobrecht/dito.git"
+    "url": "https://github.com/ogobrecht/model.git"
   },
   "scripts": {
     "watch": "chokidar sources/*.* --initial --command \"npm run build\"",
-    "prebuild": "npx ploc --in sources/DITO.pks --out README.md",
+    "prebuild": "npx ploc --debug --in \"sources/*.pks\" --out \"docs/{file}.md\"",
     "build": "node sources/build.js",
     "postbuild": "echo exit | sqlplus -S /@playground @install/core.sql && echo exit | sqlplus -S /@playground @install/apex_extension.sql",
-    "uninstall": "echo exit | sqlplus -S /@playground @uninstall/dito_packages.sql"
+    "uninstall": "echo exit | sqlplus -S /@playground @uninstall/model_packages.sql"
   },
   "devDependencies": {
     "chokidar-cli": "^3.0.0",
